@@ -1,3 +1,4 @@
+.directory
 *.pro.user
 *.m4
 autom4te.cache
