@@ -1,0 +1,9 @@
+Package: xinput-calibrator
+Version: 0.7.5-85
+Section: misc
+Depends: qt5-opensoft
+Suggests: 
+Recommends: 
+Architecture: amd64
+Maintainer: Vasiliy Sorokin <vasiliy.sorokin@opensoftdev.ru>
+Description: xinput_calibrator version with Qt frontend 
